[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmx"
version = "2.0.0"
description = "A unified API for interacting with chat fine-tuned large language models across multiple providers"
authors = [
    {name = "LLMX Team", email = "team@llmx.dev"},
]
readme = "python/README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["llm", "ai", "openai", "claude", "grok", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.2.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
huggingface = ["transformers>=4.30.0", "torch>=2.0.0"]
all = ["redis>=5.0.0", "transformers>=4.30.0", "torch>=2.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "ruff>=0.0.270",
]

[project.urls]
Homepage = "https://github.com/llmx-dev/llmx"
Documentation = "https://docs.llmx.dev"
Repository = "https://github.com/llmx-dev/llmx"
Issues = "https://github.com/llmx-dev/llmx/issues"

[project.scripts]
llmx = "llmx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["python/llmx"]

[tool.hatch.build.targets.sdist]
include = [
    "python/llmx",
    "python/README.md",
    "python/tests",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "B", "I"]